modifier keys are ignored for mouse actions when window does not have focus #66088

Closed
opened 2019-06-24 22:47:42 +02:00 by Casey Connor · 8 comments

Operating system: Kubuntu 18.10, 4.18.0-22-generic #23-Ubuntu SMP Tue Jun 4 20:22:46 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1)
Broken: 2.80, 9c5d54bfaf

If focus is in another application (e.g. a terminal window) Blender ignores any modifier keys that are depressed when mouse clicks and drags are executed on the Blender window.
[update: this also happens with another Blender window created from Window -> New Window]

E.g. If focus is in another application and shift-mmb drag is executed in the 3d viewport, it ignores the shift modifier and treats it as a mmb drag (i.e. it should pan, but it rotates the viewport instead.) Same thing with shift left click in the 3d viewport, shift left click in the outliner, alt+click drags, etc.

I don't think this is window manager related; it does not happen with other applications (e.g. with gimp it registers correctly).

Operating system: Kubuntu 18.10, 4.18.0-22-generic #23-Ubuntu SMP Tue Jun 4 20:22:46 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1) Broken: 2.80, 9c5d54bfaf48 If focus is in another application (e.g. a terminal window) Blender ignores any modifier keys that are depressed when mouse clicks and drags are executed on the Blender window. [update: this also happens with another Blender window created from Window -> New Window] E.g. If focus is in another application and shift-mmb drag is executed in the 3d viewport, it ignores the shift modifier and treats it as a mmb drag (i.e. it should pan, but it rotates the viewport instead.) Same thing with shift left click in the 3d viewport, shift left click in the outliner, alt+click drags, etc. I don't think this is window manager related; it does not happen with other applications (e.g. with gimp it registers correctly).
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae
Author

More info: the same thing happens with multiple Blender windows. Go to "Window -> New window" and make a second window; the same issue occurs between the two Blender windows. This makes using multiple windows very frustrating.

More info: the same thing happens with multiple Blender windows. Go to "Window -> New window" and make a second window; the same issue occurs between the two Blender windows. This makes using multiple windows very frustrating.
Casey Connor changed title from modifier keys are ignored when Blender window does not have focus to modifier keys are ignored when window does not have focus 2019-06-25 00:02:44 +02:00
Casey Connor changed title from modifier keys are ignored when window does not have focus to modifier keys are ignored for mouse actions when window does not have focus 2019-06-25 00:03:02 +02:00

Closed as duplicate of #40059

Closed as duplicate of #40059

This issue was referenced by 8bc76bf4b9

This issue was referenced by 8bc76bf4b957c51ddc5a13c6305f05c64b218a27

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Author

Thanks! Does this fix also apply to https://developer.blender.org/T40059 which this bug is, or at least was, a duplicate of?

Thanks! Does this fix also apply to https://developer.blender.org/T40059 which this bug is, or at least was, a duplicate of?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@clepsydrae this fix is more narrow, replied to 8bc76bf4b9

@clepsydrae this fix is more narrow, replied to 8bc76bf4b9
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66088
No description provided.