Fix T66088: Modifier keys ignored when the window doesn't have focus

Always use modifier keys from the active window, as changes to the
modifiers aren't sent to inactive windows.

Also resolves modifier keys being lost on window de-activation.
Activating the window again would check the previous state of the
modifiers which was always cleared as of [0],
now clearing is no longer needed.

[0]: 472595f1d3533f143bdc84700b26f20a7b2ba1c1